link_libraries(tf-lib)
find_package(Eigen3)
if(EIGEN3_FOUND)
    add_executable(cholesky_bm cholesky_benchmark.cpp)
    target_link_libraries(cholesky_bm PRIVATE tf-lib)
    target_include_directories(cholesky_bm PRIVATE ${EIGEN3_INCLUDE_DIR})
endif()
add_executable(micro_wait micro_wait.cpp)
add_executable(micro_deps micro_deps.cpp)